--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	</head>
 	<body>
 
-
 	<div>
 		<div id="principal">
 			<header id="destaque">
@@ -60,8 +59,8 @@
 
 
 			<section id="quem-usa">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A autem eum itaque assumenda quae quos nemo nesciunt impedit ratione accusamus modi corrupti natus, recusandae beatae, inventore repellat asperiores delectus veritatis?</p>
-				<h3>Jane Hunt</h3>
+				<p class="comentario">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut.”</p>
+				<h3 class="autor">Jane Hunt</h3>
 				<ul>
 					<li><img src="imagens/profile.jpg" alt="Nome do Usuario"></li>
 					<li><img src="imagens/profile1.jpg" alt="Nome do Usuario"></li>
@@ -86,9 +85,9 @@
 					<li><img src="imagens/profile.jpg" alt="Nome do Usuario"></li>
 				</ul>
 				<h4>Say Hi & Get In Touch </h4>
-				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum eligendi porro quam accusantium dolor maxime dolore, similique facilis, earum sapiente deserunt expedita enim culpa voluptatum. Modi, velit, natus? Corporis, praesentium.
+				<p class="chamada"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. praesentium.
 				</p>
-				<ul>
+				<ul class="redes-sociais">
 					<li class="icon-twitter"></li>
 					<li class="icon-facebook"></li>
 					<li class="icon-pinterest"></li>
@@ -96,14 +95,14 @@
 				</ul>
 			</section>		
 		
-			<footer>
+			<footer class="footer">
 				<ul>
-					<li>Contact</li>
-					<li>Download</li>
-					<li>Press</li>
-					<li>Email</li>
-					<li>Support</li>
-					<li>Privacy Policy</li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Download</a></li>
+					<li><a href="#">Press</a></li>
+					<li><a href="#">Email</a></li>
+					<li><a href="#">Support</a></li>
+					<li><a href="#">Privacy Policy</a></li>
 				</ul>
 			</footer>
 		</div>
